@@ -1,5 +1,5 @@
 
- OpenSSL 0.9.7i XX xxx XXXX
+ OpenSSL 0.9.7i 14 Och 2005
 
  Copyright (c) 1998-2005 The OpenSSL Project
  Copyright (c) 1995-1998 Eric A. Young, Tim J. Hudson
