@@ -5,6 +5,10 @@
   This file gives a brief overview of the major changes between each OpenSSL
   release. For more details please read the CHANGES file.
 
+  Major changes between OpenSSL 0.9.7h and OpenSSL 0.9.7i:
+
+      o Give EVP_MAX_MD_SIZE it's old value, except for a FIPS build.
+
   Major changes between OpenSSL 0.9.7g and OpenSSL 0.9.7h:
 
       o Fix SSL 2.0 Rollback, CAN-2005-2969
